                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 24-06-2005 changed: aaccodec now uses mp4ff to read m4a files (aaccodec.dll in system\players\paplayer got updated)
 - 24-06-2005 updated: Norwegian language file (Thnx to vnm)
 - 24-06-2005 updated: German language file
 - 24-06-2005 changed: dll's loaded via section loader are unloaded with a 30 secs delay when unreferenced -> more freemem when using my music
 - 22-06-2005 fixed: some nav sounds are not played correctly
 - 22-06-2005 added: New MasterLock option: Settings & Filemanager & Home Media [GeminiServer]
                     Now you can define a MasterLock also for Settings, Filemanager, My Video, My Music, My Pictures, My Programms
                     Location: Settings - Appearance - Master Lock: Lock Filemanger, Lock Settings and Lock Media!
                     These settings are also setable via xboxmediacenter.xml: <LockFilemanager>0</LockFilemanager>, <LockSettings>0</LockSettings>, <LockHomeMedia>0</LockHomeMedia>
 - 21-06-2005 added: use of combined conditional visibility is now supported in skin.
                     + is logical AND, | is used for logical OR. ie VideoPlayer.IsFullscreen + !Player.Caching, will display when fullscreen and not rebuffering
 - 21-06-2005 added: progress bar / slider can use info values. ie <info>Player.Progress</info> will make progressbar/slider display current progress
                     valid commands are so far only: Player.Progress, Plyayer.Seekbar (Seekbars current location), Player.Caching (Progress of caching)
 - 21-06-2005 added: sliders now respect <height> and <width>, scaling will be based on background image